--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "christianalfoni-webpack",
+  "name": "webpack-react-babel-boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
